@@ -1,3 +1,7 @@
+Thu Mar 17 10:03:50 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/userdb.py: remove a couple of bugs
+
 Wed Mar 16 19:40:03 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* lib/userdb.py lib/util.py po/POTFILES.in: implementation of userdb,
